fix right-rail overflow and setting currentPage when docId does not initialize immediately

--- a/documents/css/app.css
+++ b/documents/css/app.css
@@ -1275,7 +1275,7 @@ input[type='text']:disabled, textarea:disabled {
     display: none !important;
 }
 
-doc-viewer, [internal-right-rail] > div {
+doc-viewer, [internal-right-rail], [internal-right-rail] > div {
     height: 100%;
     overflow: auto;
 }
